added student registration excel template

--- a/blug/src/view/download.html
+++ b/blug/src/view/download.html
@@ -111,7 +111,7 @@
       output.textContent = "";
 
       try {
-        const response = await fetch("/upload-student-records", {
+        const response = await fetch("/upload-files", {
           method: "POST",
           body: formData
         });
